--- a/app/views/partials/template/head.ejs
+++ b/app/views/partials/template/head.ejs
@@ -1,4 +1,6 @@
+<meta charset="UTF-8">
 <title><%= siteTitle %>--<%= pageTitle %></title>
 <link rel='stylesheet' href='/css/style.css' />
-<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-<link href='https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab' rel='stylesheet' type='text/css'>
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<link rel="stylesheet" href="/css/bootstrap.css">
