--- a/app/views/person.ejs
+++ b/app/views/person.ejs
@@ -19,6 +19,26 @@
 
 
     <div class="container">
-    </div>
+
+    <div class="row fixed-bottom">
+      <div class="col-4 text-center rounded" style="background-color: rgba(255,100,0,0.5)">
+        <a href="/bootstrap-index">
+          <h5 class="text-white">INDEX</h5>
+        </a>
+      </div>
+      <div class="col-4 text-center rounded" style="background-color: rgba(255,0,180,0.5)">
+        <a href="/form">
+          <h5 class="text-white">FORM</h5>
+        </a>
+      </div>
+      <div class="col-4 text-center rounded" style="background-color: rgba(0,100,180,0.4)">
+        <a href="/layout">
+          <h5 class="text-white">LAYOUT</h5>
+        </a>
+      </div>
+
+
+    </div><!-- row -->
+  </div><!-- container -->
   </body>
 </html>
