--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -80,9 +80,6 @@
 
 </div><!-- container -->
 
-<script src="../js/jquery-3.2.1.min.js"></script>
-<script src="../js/tether.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
-<script src="../js/scripts.js"></script>
+<% include partials/template/foot.ejs %>
 </body>
 </html>
