--- a/views/js_test_001.ejs
+++ b/views/js_test_001.ejs
@@ -21,5 +21,9 @@
       <div id="out_button" class="start_black">
         <h3>OUT</h3>
       </div>
+      <br />
+      <div id="timer" class="timer_off">
+
+      </div>
   </body>
 </html>
