--- a/public/css/js_test_001.css
+++ b/public/css/js_test_001.css
@@ -8,6 +8,7 @@ h3 {
   font-weight: 900;
   margin: auto;
   text-align: center;
+  background: rgba(20, 20, 30, 0.9);
 }
 
 #in_button {
@@ -31,7 +32,7 @@ h3 {
 #timer {
   width: 40%;
   margin: auto;
-  
+
 }
 
 
