more in and out tests

--- a/views/js_test_001.ejs
+++ b/views/js_test_001.ejs
@@ -8,6 +8,9 @@
     <link rel='stylesheet' href='../css/js_test_001.css' />
   </head>
   <body>
+      <p style="font-size: 10px; color: rgba(243, 241, 240,0.7); width: 60%; margin: auto; font-family: Avenir">
+        OK. The point of this little web app is to log ins and outs at the Bok Center's Learning Lab.  We capture loads and LOADS of footage, often running 6-8 cameras at a time for much of the eight-hr day.  We can't hire the editing time required to review all of this footage, clearly, so we need ways of editing in realtime.  As events happen, we need to "live-log" them: identify the good bits, cut the bad bits, attach tags that help to organize and even interpret all the moments of activity, argumenta and insight that happen in the lab.  This, and other workflow tools, is an attempt to cope with the firehose of visual data that emerges from our studios (i.e. all the cool stuff our fellows do as they expand the vocabulary of moves teachers and learners can make).
+      </p>
       <div id="space" style="height: 30vh;">
 
       </div>
@@ -24,6 +27,14 @@
       <br />
       <div id="timer" class="timer_off">
 
+      </div>
+      <div id="digital_clock">
+        <h3>digital clock</h3>
+        <div id="the_digits">
+          <span id="digital_hrs"></span>
+          <span id="digital_min">:</span>
+          <span id="digital_sec">:</span>
+        </div>
       </div>
   </body>
 </html>
